--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 						<article>
 							<a href="#" class="image featured"><img src="images/pic03.jpg" alt="" /></a>
 							<header>
-								<h3><a href="#">fractal moment</a></h3>
+								<h3><a href="#">fractal moments</a></h3>
 							</header>
 							
 						</article>
