--- a/index.html
+++ b/index.html
@@ -63,9 +63,9 @@
 						</article>
 
 						<article>
-							<a href="#" class="image featured"><img src="images/pic03.jpg" alt="" /></a>
+							<a href="#" class="image featured"><img src="images/1.jpg" alt="" /></a>
 							<header>
-								<h3><a href="#">fractal moments</a></h3>
+								<h3><a href="#">test</a></h3>
 							</header>
 							
 						</article>
